# ccrs

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_module }}/: Cargo.toml  README.md
{{ cookiecutter.project_module }}/src/: lib.rs  main.rs
